# multisql-cli

./: .gitignore  Cargo.toml  README.md  test.csv
.github/workflows/: release.yml
src/: main.rs
