[package]
name = "multisql-cli"
version = "0.1.0"
authors = ["Kyran Gostelow <kyran@gostelow.me>"]
edition = "2021"
description = "MultiSQL CLI"
license = "Apache-2.0"
repository = "https://github.com/KyGost/multisql-cli"

[dependencies]
dialoguer = "^0"
indicatif = "^0"
multisql = "0.1.3"
lazy_static = "^1"
console = "^0"
cli-table = "^0"
serde_yaml = "0.8.23"
dirs = "^4"